@@ -70,6 +70,7 @@ Yosys 0.9 .. Yosys 0.9-dev
     - Added "dfflegalize" pass
     - Added "_TECHMAP_CELLNAME_" parameter for "techmap" pass
     - Merged "dffsr2dff", "opt_rmdff", "dff2dffe", "dff2dffs", "peepopt.dffmux" passes into a new "opt_dff" pass
+    - Added $meminit_v2 cells (with support for write mask)
 
 Yosys 0.8 .. Yosys 0.9
 ----------------------
